# ArrayCalculator

./: README.md  pyproject.toml  requirements.txt
example_data/: geometry.csv  geometry_full.csv  geometry_nonuniform.csv  pattern.csv
old/: pattern.csv
src/: array_calculator.py  array_common.py  array_evaluator.py  bartlett_array.py  binomial_array.py  blackman_array.py  cosine_array.py  cosine_squared_array.py  dolph_tschebyscheff.py  hamming_array.py  hann_array.py  kaiser_array.py  taylor_array.py  triangular_array.py  uniform_array.py  villeneuve_array.py  windowed_array.py  woodward_lawson_array.py
tests/: conftest.py  test_array_calculator.py  test_array_evaluator.py  test_bartlett_array.py  test_binomial_array.py  test_blackman_array.py  test_cosine_array.py  test_cosine_squared_array.py  test_dolph_tschebyscheff.py  test_hamming_array.py  test_hann_array.py  test_helpers.py  test_kaiser_array.py  test_normalization.py  test_triangular_array.py  test_uniform_array.py  test_villeneuve_array.py  test_woodward_lawson_array.py  tests_plots.py
